--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".MainApplication"
+        android:name=".Metrica"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,6 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NewFair"
         android:usesCleartextTraffic="true">
+        <service
+            android:name=".ConnectionService"
+            android:enabled="true"
+            android:exported="true" />
         <activity
             android:name=".WebViewActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize" />
@@ -26,10 +30,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service
-            android:name=".ConnectionService"
-            android:enabled="true"
-            android:exported="true" />
     </application>
 
 </manifest>
