--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:enabled="true"
             android:exported="true" />
         <activity
-            android:name=".WebViewActivity"
+            android:name=".WebView"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize" />
         <activity android:name=".MainActivity">
             <intent-filter>
